log
Sun Mar 20 20:45:14 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2f699a2
Sun Mar 20 20:46:33 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
ab47ffb
Sun Mar 20 20:53:07 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
71b4fd6
Sun Mar 20 20:54:44 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
33367e6
Sun Mar 20 20:57:00 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9bf53fa
Sun Mar 20 20:57:55 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
3445e58
Sun Mar 20 20:59:04 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
3bb0b28
Sun Mar 20 21:00:13 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7b049c4
Sun Mar 20 21:06:23 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4748c37
Sun Mar 20 21:11:28 HSP 2022: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  9|3
total_score: 35/70
058972d
Sun Mar 20 21:16:51 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
80d6209
Sun Mar 20 21:19:19 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
2405846
Sun Mar 20 21:21:04 HSP 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
eb7f9f7
Sun Mar 20 21:37:15 HSP 2022: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|1
total_score: 55/70
ca67961
